update html file

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <main class="content">
     <img class="content__illustration" src="./assets/images/illustration-article.svg" alt="illustration-article">
     <section class="content__meta">
-      <a class="content__category" href="#">Learning</a>
+      <h5><a class="content__category" href="#">Learning</a></h5>
       <p class="content__date">Published 21 Dec 2023</p>
     </section>
     <section class="content__summary">
       <h3 class="content__title">HTML & CSS foundations</h3>
       <p class="content__paragraph">These languages are the backbones of every website, defining structure, content, and presentation.</p>
     </section>
-    <section class="content__author">
+    <figure class="content__author">
       <img class="content__authors__avatar" src="./assets/images/image-avatar.webp" alt="image avatar">
       <p class="content__authors__name">Greg Hooper</p>
-    </section>
+    </figure>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
